<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ProfilDosenActivity">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_profil_dosen"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/img_profile"
        app:civ_border_color="@color/colorGray"
        app:civ_border_width="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_edit_profil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/ic_border_color_black_24dp"
        android:text="@string/edit_profil"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="@+id/img_profil_dosen"
        app:layout_constraintStart_toStartOf="@+id/img_profil_dosen"
        app:layout_constraintTop_toBottomOf="@id/img_profil_dosen" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/nama"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_edit_profil" />

    <TextView
        android:id="@+id/tv_nama_profil_dosen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        tools:text="Hetti Hidayati, S.Kom., MT."
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView27"
        app:layout_constraintTop_toBottomOf="@+id/textView27" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/nip"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/tv_nama_profil_dosen"
        app:layout_constraintTop_toBottomOf="@+id/tv_nama_profil_dosen" />

    <TextView
        android:id="@+id/tv_nip_profil_dosen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="06750056"
        app:layout_constraintStart_toStartOf="@+id/textView29"
        app:layout_constraintTop_toBottomOf="@+id/textView29" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/email"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/tv_nip_profil_dosen"
        app:layout_constraintTop_toBottomOf="@+id/tv_nip_profil_dosen" />

    <TextView
        android:id="@+id/tv_email_profil_dosen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="hettihd@tass.telkomuniversity.ac.id"
        app:layout_constraintEnd_toEndOf="@+id/tv_nama_profil_dosen"
        app:layout_constraintStart_toStartOf="@+id/textView31"
        app:layout_constraintTop_toBottomOf="@+id/textView31" />

    <TextView
        android:id="@+id/textView33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/no_telepon"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/tv_email_profil_dosen"
        app:layout_constraintTop_toBottomOf="@+id/tv_email_profil_dosen" />

    <TextView
        android:id="@+id/tv_noTlp_profil_dosen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="089656499201"
        app:layout_constraintStart_toStartOf="@+id/textView33"
        app:layout_constraintTop_toBottomOf="@+id/textView33" />

    <Button
        android:id="@+id/btn_keluar"
        style="@style/base_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/keluar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_noTlp_profil_dosen" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>