<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DetailMahasiswaActivity">


        <Button
            android:id="@+id/btn_lihat_profil"
            style="@style/base_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/lihat_profil"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:src="@drawable/icon_persen"
            app:layout_constraintBottom_toBottomOf="@+id/tv_persen_poin"
            app:layout_constraintEnd_toEndOf="@+id/tv_poin"
            app:layout_constraintStart_toStartOf="@+id/tv_poin"
            app:layout_constraintTop_toBottomOf="@+id/tv_poin" />

        <TextView
            android:id="@+id/tv_total_poin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            tools:text="50"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@+id/tv_poin"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_poin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/total_poin"
            android:textColor="@color/colorGray"
            app:layout_constraintBottom_toBottomOf="@+id/tv_total_poin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_persen_poin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/persen_poin"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_total_poin"
            app:layout_constraintStart_toStartOf="@+id/tv_total_poin"
            app:layout_constraintTop_toBottomOf="@+id/tv_total_poin" />

        <TextView
            android:id="@+id/tv_status_detail_mahasiswa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tidak_ada_kesalahan"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/rv_list_kelasalahan" />

        <View
            android:id="@+id/divider3"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@color/colorGrayWhite"
            app:layout_constraintEnd_toEndOf="@+id/btn_lihat_profil"
            app:layout_constraintStart_toStartOf="@+id/tv_poin"
            app:layout_constraintTop_toBottomOf="@+id/tv_persen_poin" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_list_kelasalahan"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingBottom="84dp"
        android:clipToPadding="false"
        android:scrollbarStyle="outsideOverlay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider3"
        tools:listitem="@layout/list_daftar_kesalahan" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_tambah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/icon_tambah" />
</androidx.constraintlayout.widget.ConstraintLayout>